--- a/Pitch/View Controllers/ExploreViewController.xib
+++ b/Pitch/View Controllers/ExploreViewController.xib
@@ -36,7 +36,9 @@
                         <constraint firstAttribute="height" constant="25" id="aIY-wh-A98"/>
                         <constraint firstAttribute="width" constant="25" id="ccp-Uz-WLj"/>
                     </constraints>
-                    <state key="normal" title="Button" image="menu"/>
+                    <state key="normal" title="Button" image="menu">
+                        <color key="titleColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </state>
                     <connections>
                         <action selector="filterButtonPressed:" destination="-1" eventType="touchUpInside" id="yrn-Ac-pHX"/>
                     </connections>
