--- a/Pitch/View/DistanceCell.xib
+++ b/Pitch/View/DistanceCell.xib
@@ -29,9 +29,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ecb-cP-j76">
-                        <rect key="frame" x="10" y="43.5" width="66" height="30"/>
+                        <rect key="frame" x="10" y="43.5" width="100" height="30"/>
                         <color key="backgroundColor" red="0.37075540420000003" green="0.77097988129999995" blue="0.59605771299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="100" id="t8m-UF-QUQ"/>
                             <constraint firstAttribute="height" constant="30" id="vnX-sb-AuM"/>
                         </constraints>
                         <state key="normal" title="Less than">
@@ -42,21 +43,35 @@
                         </connections>
                     </button>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3wW-TZ-aMW">
-                        <rect key="frame" x="84" y="43.5" width="100" height="30"/>
+                        <rect key="frame" x="118" y="43.5" width="144" height="30"/>
                         <color key="backgroundColor" red="0.38259750599999998" green="0.79456412789999997" blue="0.61566519740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="7FX-lI-VKS"/>
-                        </constraints>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ac0-YS-CBJ">
+                        <rect key="frame" x="270" y="43.5" width="40" height="30"/>
+                        <color key="backgroundColor" red="0.37075540420000003" green="0.77097988129999995" blue="0.59605771299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="h1g-uX-Kle"/>
+                            <constraint firstAttribute="width" constant="40" id="jEX-om-Kil"/>
+                        </constraints>
+                        <state key="normal" title="km">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <connections>
+                            <action selector="unitButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="WNt-IP-6ze"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ac0-YS-CBJ" firstAttribute="leading" secondItem="3wW-TZ-aMW" secondAttribute="trailing" constant="8" id="0Vi-tB-bon"/>
                     <constraint firstItem="Ecb-cP-j76" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="1g8-2V-R3D"/>
                     <constraint firstItem="NKY-o4-fyc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Aqi-EF-Tig"/>
                     <constraint firstItem="Ecb-cP-j76" firstAttribute="top" secondItem="NKY-o4-fyc" secondAttribute="bottom" constant="8.5" id="IXp-uA-E3s"/>
                     <constraint firstAttribute="trailing" secondItem="NKY-o4-fyc" secondAttribute="trailing" constant="252" id="Miv-jb-uZ5"/>
+                    <constraint firstItem="Ac0-YS-CBJ" firstAttribute="centerY" secondItem="3wW-TZ-aMW" secondAttribute="centerY" id="PRN-pQ-zmw"/>
+                    <constraint firstAttribute="trailing" secondItem="Ac0-YS-CBJ" secondAttribute="trailing" constant="10" id="d2R-Zi-c6x"/>
                     <constraint firstItem="3wW-TZ-aMW" firstAttribute="centerY" secondItem="Ecb-cP-j76" secondAttribute="centerY" id="deS-Ik-LhE"/>
                     <constraint firstAttribute="bottom" secondItem="Ecb-cP-j76" secondAttribute="bottom" constant="10" id="dfc-BO-aBQ"/>
                     <constraint firstItem="3wW-TZ-aMW" firstAttribute="leading" secondItem="Ecb-cP-j76" secondAttribute="trailing" constant="8" id="uUv-GQ-Qy0"/>
@@ -65,9 +80,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="bottomConstraint" destination="H2p-sc-9uM" id="dx2-H7-2X9"/>
                 <outlet property="distanceLabel" destination="NKY-o4-fyc" id="g7E-fP-F2l"/>
                 <outlet property="distanceToggleButton" destination="Ecb-cP-j76" id="cOT-74-fEe"/>
+                <outlet property="unitButton" destination="Ac0-YS-CBJ" id="XXb-LV-1Qn"/>
             </connections>
             <point key="canvasLocation" x="137.59999999999999" y="149.32533733133434"/>
         </tableViewCell>
