--- a/Pitch/View/NumberOfPeopleCell.xib
+++ b/Pitch/View/NumberOfPeopleCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NumberOfPeopleCell" id="KGk-i7-Jjw" customClass="NumberOfPeopleCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NumberOfPeopleCell" rowHeight="92" id="KGk-i7-Jjw" customClass="NumberOfPeopleCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="91.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of People" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0Y-az-m6n">
@@ -25,13 +25,24 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="k5h-us-whm">
+                        <rect key="frame" x="8" y="33" width="304" height="49.5"/>
+                    </slider>
                 </subviews>
                 <constraints>
                     <constraint firstItem="m0Y-az-m6n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Ct2-aW-L7E"/>
                     <constraint firstItem="m0Y-az-m6n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="DOj-wS-Muf"/>
+                    <constraint firstAttribute="trailing" secondItem="k5h-us-whm" secondAttribute="trailing" constant="10" id="Ia2-0o-b8m"/>
+                    <constraint firstItem="k5h-us-whm" firstAttribute="top" secondItem="m0Y-az-m6n" secondAttribute="bottom" constant="10" id="gei-eH-mhP"/>
+                    <constraint firstAttribute="bottom" secondItem="k5h-us-whm" secondAttribute="bottom" constant="10" id="kqE-QN-lFC"/>
+                    <constraint firstItem="k5h-us-whm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="lyH-dd-Gn5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="slider" destination="k5h-us-whm" id="7nD-CB-QdQ"/>
+            </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="175.41229385307346"/>
         </tableViewCell>
     </objects>
 </document>
